# dataorg

./: .gitignore  Makefile  README.md  package-lock.json  package.json  version.json
app/backend/: f.txt  manage.py  setup.cfg  version.json
app/backend/requirements/: shared.in  shared.txt
app/backend/ws/: __init__.py  urls.py
app/backend/ws/core/: settings.py
app/backend/ws/settings/: base.py  dev.py
app/myproject/myproject/: settings.py
app/myproject/templates/: base.html  index.html
app/myproject/templates/pages/: index.html
config/: Dockerfile  Dockerfile2  commands.sh  create_role.sh  dockerfile_parsed.sh  generate_init_django_sql.py  gunicorn_start.bash  init_db.sh  init_django.sql  install.sh  nginx_production.conf  parse_dockerfile.js  pass_os_variables.sh  random_passes.sh  start_django.sh  start_postgres.sh  supervisor_production.conf  untitled.Dockerfile  ws_0.config
