[metadata]
name = ws
version = 0.0.1
license = MIT
description = Blog website
author = Sergey Dubenskiy
author_email = adsnsrg@gmail.com
url = http://data.org.ru
classifiers = 
	Development Status :: 5 - Active development
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
